# hs-hasql-minimig

./: .gitignore  README.md  cabal.project  flake.nix
hasql-minimig/: LICENSE  README.md  cabal.nix  hasql-minimig.cabal
hasql-minimig/lib/Hasql/: Minimig.hs
hasql-minimig/test/: Main.hs
hasql-minimig/test/migs/dirty/: README.txt
hasql-minimig/test/migs/ok/: 004__.sql.sql  06_ wow, Fancy!.sql  1_hello.sql  2_.sql  3__.sql
